--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.5.0",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
